# django-brackets

./: .gitignore  .readthedocs.yaml  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  tox.ini
.devcontainer/: devcontainer.json
.github/workflows/: docs.yml  testing.yml  typing.yml
contribution_guide/: index.html
contributors/: index.html
docs/: access.md  contribution_guide.md  contributors.md  form_views.md  forms.md  http.md  index.md  misc.md  queries.md  redirects.md  requirements.txt  rest_framework.md
docs/mixins/: access.md  form_views.md  forms.md  http.md  misc.md  queries.md  redirects.md  rest_framework.md
mixins/access/: index.html
mixins/form_views/: index.html
mixins/forms/: index.html
mixins/http/: index.html
mixins/misc/: index.html
mixins/queries/: index.html
mixins/redirects/: index.html
mixins/rest_framework/: index.html
search/: search_index.json
src/brackets/: __init__.py  __main__.py  exceptions.py
src/brackets/mixins/: __init__.py  __init__.pyi  access.py  access.pyi  form_views.py  form_views.pyi  forms.py  forms.pyi  http.py  http.pyi  misc.py  misc.pyi  queries.py  queries.pyi  redirects.py  redirects.pyi  rest_framework.py  rest_framework.pyi
tests/: __init__.py  conftest.py
tests/mixins/: test_access.py  test_form_views.py  test_forms.py  test_http.py  test_json.py  test_messages.py  test_misc.py  test_queries.py  test_redirects.py  test_rest_framework.py
tests/project/: forms.py  helpers.py  models.py  settings.py  urls.py
